--- a/admin/src/app/pages/islemler/bayiKullaniciIslemleri/bayiKullaniciIslemleri.html
+++ b/admin/src/app/pages/islemler/bayiKullaniciIslemleri/bayiKullaniciIslemleri.html
@@ -181,7 +181,7 @@
             </td>
             <td class="text-center">
             <button class="btn btn-sm btn-outline-primary w-48" style="margin-right: 3%;" (click)="duzenleButton(kullanici)" ><i class="fas fa-edit"></i></button>
-            <button class="btn btn-sm btn-dark w-48" (click)="silButton(kullanici, 'bayiKullaniciIslemleri/kullaniciSil');"><i class="fas fa-times"></i></button>
+            <button class="btn btn-sm btn-dark w-48" *ngIf="!silinenKayitBtn[kullanici.e_id]" (click)="silButton(kullanici, 'bayiKullaniciIslemleri/kullaniciSil');"><i class="fas fa-times"></i></button>
             <button class="btn btn-sm btn-dark w-48" *ngIf="silinenKayitBtn[kullanici.e_id]"><div class="spinner-glow spinner-glow-light mt-0"></div></button>
             </td>
         </tr>
