--- a/admin/src/app/pages/islemler/stokKartIslemleri/stokKartIslemleri.html
+++ b/admin/src/app/pages/islemler/stokKartIslemleri/stokKartIslemleri.html
@@ -25,9 +25,8 @@
                 <input type="text" class="form-control" formControlName="e_stok_kart_adi" title="Stok Kart Adı" required>
             </div>
             <div class="col-md-3 form-group">
-                <label>Abonelik Durumu: *</label>
+                <label>Durum: *</label>
                 <select class="form-control" formControlName="e_durum" title="Durum" required>
-                    <option value="">-- Seçiniz --</option>
                     <option value="Aktif">Aktif</option>
                     <option value="Pasif">Pasif</option>
                 </select>
