--- a/admin/src/app/pages/islemler/stokKartIslemleri/stokKartIslemleri.html
+++ b/admin/src/app/pages/islemler/stokKartIslemleri/stokKartIslemleri.html
@@ -104,12 +104,12 @@
         <input type="text" class="form-control" [(ngModel)]="filterData.ARAMA" [ngModelOptions]="{standalone: true}">
         </div>
         <div class="form-group col-md-2">
-        <label>Durum:</label>
-        <select class="form-control" [(ngModel)]="filterData.e_durum" [ngModelOptions]="{standalone: true}" (change)="stokKartKayitlariListele()">
-            <option value="">-- Tümü --</option>
-            <option value="Aktif">Aktif</option>
-            <option value="Pasif">Pasif</option>
-        </select>
+          <label>Durum:</label>
+          <select class="form-control" [(ngModel)]="filterData.e_durum" [ngModelOptions]="{standalone: true}" (change)="stokKartKayitlariListele()">
+              <option value="">-- Tümü --</option>
+              <option value="Aktif">Aktif</option>
+              <option value="Pasif">Pasif</option>
+          </select>
         </div>
         <div class="form-group col-md-2">
         <label>&nbsp;</label>
@@ -153,9 +153,9 @@
         <tr *ngFor="let stok of stokKartTanimlari">
             <td class="text-center">{{stok.e_id}}</td>
             <td class="text-center">
-                <span class="badge badge-success p-1 w-100 " style="background-color: blue;" *ngIf="stok.e_cinsiyet == 'Erkek'">Erkek</span>
-                <span class="badge badge-secondary p-1 w-100 " style="background-color: pink;" *ngIf="stok.e_cinsiyet == 'Kadın'">Kadın</span>
-                <span class="badge badge-secondary p-1 w-100 " style="background-color: rgb(72, 72, 72);" *ngIf="stok.e_cinsiyet == 'Unisex'">Unisex</span>
+                <span class="badge badge-success p-1 w-100 " style="background-color: #77B6EA;" *ngIf="stok.e_cinsiyet == 'Erkek'">Erkek</span>
+                <span class="badge badge-secondary p-1 w-100 " style="background-color: #F47C7C" *ngIf="stok.e_cinsiyet == 'Kadın'">Kadın</span>
+                <span class="badge badge-secondary p-1 w-100 " style="background-color: #383838" *ngIf="stok.e_cinsiyet == 'Unisex'">Unisex</span>
             </td>
             <td class="text-center">{{stok.e_stok_kart_kodu}}</td>
             <td class="text-left">{{stok.e_stok_kart_adi}}</td>
