--- a/admin/src/assets/scss/custom/pages/_authentication.scss
+++ b/admin/src/assets/scss/custom/pages/_authentication.scss
@@ -7,7 +7,7 @@
 }
 
 .authentication-bg{
-    background-image: url("../../../images/authentication-bg.jpeg");
+    background-image: url("../../../images/authentication-bg.jpg");
     height: 100vh;
     background-size: cover;
     background-position: center;
