--- a/admin/src/app/pages/kayitlar/siparisKayitlari/siparisKayitlari.html
+++ b/admin/src/app/pages/kayitlar/siparisKayitlari/siparisKayitlari.html
@@ -6,40 +6,55 @@
     </button>
   </div>
   <div class="modal-body">
-    <div class="table-responsive">
-      <table class="table table-bordered table-hover">
-        <thead>
-          <tr>
-            <th class="text-center">Stok Kodu</th>
-            <th class="text-center">Ürün Adı</th>
-            <th class="text-center">Adet</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let detay of secilenKayit.KALEMLER">
-            <td class="text-left">{{detay.e_stok_kart_kodu}}</td>
-            <td class="text-left">{{detay.e_stok_kart_adi}}</td>
-            <td class="text-left">{{detay.e_miktar}}</td>
-            <td class="text-center">X</td>
-          </tr>
-        </tbody>
-      </table>
+    <form validControl [formGroup]="siparisFormu" (submit)="islemiKaydet()">
+        <div class="row m-0">
+          <div class="col-12 form-group">
+            <label>Sipariş Durumu</label>
+            <select class="form-control" formControlName="e_durum" title="Sipariş Durumu">
+              <option value="İşlem Bekliyor">İşlem Bekliyor</option>
+              <option value="İşleme Alındı">İşleme Alındı</option>
+              <option value="Gönderildi">Gönderildi</option>
+            </select>
+          </div>
+          <div class="col-12 mt-3">
+            <div class="table-responsive">
+              <table class="table table-bordered table-hover">
+                <thead>
+                  <tr>
+                    <th class="text-center">Stok Kodu</th>
+                    <th class="text-center">Ürün Adı</th>
+                    <th class="text-center">Adet</th>
+                    <th></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let detay of secilenKayit.KALEMLER">
+                    <td class="text-left">{{detay.e_stok_kart_kodu}}</td>
+                    <td class="text-left">{{detay.e_stok_kart_adi}}</td>
+                    <td class="text-center">{{detay.e_miktar}}</td>
+                    <td class="text-center">X</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        <button id="submitButton" class="hidden">Kaydet</button>
     </div>
+    </form>
   </div>
   <div class="modal-footer">
-    <!-- <button class="btn btn-primary mr-1 w-lg" *ngIf="!islemiKaydetBtn" onclick="document.getElementById('submitButton').click()">
+    <button class="btn btn-primary mr-1 w-lg" *ngIf="!islemiKaydetBtn" onclick="document.getElementById('submitButton').click()">
       <i class="fas fa-check mr-2"></i> Kaydet
     </button>
     <button class="btn btn-primary mr-1 w-lg" *ngIf="islemiKaydetBtn">
       <div class="spinner-glow spinner-glow-light mt-0 mr-2"></div> Kaydeliyor
-    </button> -->
+    </button>
     <button class="btn btn-outline-dark w-lg" (click)="modal.dismiss('')"><span class="fas fa-times mr-2"></span> İptal</button>
   </div>
 </ng-template>
 
 <div class="separator-breadcrumb border-top mb-3"></div>
-  
+
 <div class="card shadow-dark mb-3">
   <div class="card-body">
     <form class="row m-0" (submit)="siparisListele()">
@@ -51,8 +66,9 @@
         <label>Durum:</label>
         <select class="form-control" [(ngModel)]="filterData.e_durum" [ngModelOptions]="{standalone: true}" (change)="siparisListele()">
           <option value="">-- Tümü --</option>
-          <option value="Aktif">Aktif</option>
-          <option value="Pasif">Pasif</option>
+          <option value="İşlem Bekliyor">İşlem Bekliyor</option>
+          <option value="İşleme Alındı">İşleme Alındı</option>
+          <option value="Gönderildi">Gönderildi</option>
         </select>
       </div>
       <div class="form-group col-md-2">
@@ -62,7 +78,38 @@
     </form>
   </div>
 </div>
-  
+
+<div class="row m-1" *ngIf="siparisOzetSayilar">
+  <div class="col-3" (click)="filtreliListele('İşlem Bekliyor')">
+    <div class="shadow-warning m-1">
+      <div class="card-body" style="text-align: center;">
+        <strong>İşlem Bekleyen : {{siparisOzetSayilar[0].ISLEM_BEKLIYOR}}</strong>
+      </div>
+    </div>
+  </div>
+  <div class="col-3">
+    <div class="shadow-info m-1" (click)="filtreliListele('İşleme Alındı')">
+      <div class="card-body" style="text-align: center;">
+        <strong>İşleme Alındı : {{siparisOzetSayilar[0].ISLEME_ALINDI}}</strong>
+      </div>
+    </div>
+  </div>
+  <div class="col-3" (click)="filtreliListele('Gönderildi')">
+    <div class="shadow-success m-1">
+      <div class="card-body" style="text-align: center;">
+        <strong>Gönderildi : {{siparisOzetSayilar[0].GONDERILDI}}</strong>
+      </div>
+    </div>
+  </div>
+  <div class="col-3" (click)="filtreliListele('')">
+    <div class="shadow-primary m-1">
+      <div class="card-body" style="text-align: center;">
+        <strong>Tümü : {{siparisOzetSayilar[0].TUMU}}</strong>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="alert alert-primary p-4" *ngIf="!siparisListesi && !mainLoader">
   <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
   <span class=" valign-middle">Listelemek istediğiniz kayıt bulunamadı.</span>
@@ -72,8 +119,8 @@
     <div class="spinner-glow spinner-glow-primary m-0 mr-4 valign-middle"></div>
     <span class="valign-middle">Sipariş kayıtları listeleniyor, lütfen bekleyiniz.</span>
 </div>
-  
-<div class="card full-list-1" [hidden]="!siparisListesi || mainLoader">
+
+<div class="card full-list-1" [hidden]="!siparisListesi || mainLoader" style="height: calc(100vh - 300px) !important;">
     <div class="card-body" *ngIf="siparisListesi && !mainLoader">
       <div class="table-responsive">
         <table class="table table-bordered table-hover">
@@ -87,14 +134,15 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let siparis of siparisListesi" (click)="siparisDetayAc(siparis)">
-                <td class="text-left">{{siparis.e_tarih | date: 'dd.MM.yyyy - HH:mm'}}</td>
+            <tr *ngFor="let siparis of siparisListesi" (click)="siparisGuncelle(siparis)">
+                <td class="text-center">{{siparis.e_tarih | date: 'dd.MM.yyyy - HH:mm'}}</td>
                 <td class="text-left">{{siparis.e_siparisi_acan_kullanici_adi}}</td>
                 <td class="text-left">{{siparis.e_farkli_kalem_sayisi}} adet</td>
                 <td class="text-left">{{siparis.e_toplam_miktar}} adet</td>
                 <td class="text-center">
-                    <span class="badge badge-success p-1 w-100 " *ngIf="siparis.e_durum == 'Aktif'">Aktif</span>
-                    <span class="badge badge-secondary p-1 w-100 " *ngIf="siparis.e_durum != 'Aktif'">Pasif</span>
+                    <span class="badge badge-warning p-1 w-100 " *ngIf="siparis.e_durum == 'İşlem Bekliyor'">İşlem Bekliyor</span>
+                    <span class="badge badge-secondary p-1 w-100 " *ngIf="siparis.e_durum == 'İşleme Alındı'">İşleme Alındı</span>
+                    <span class="badge badge-secondary p-1 w-100 " *ngIf="siparis.e_durum == 'Gönderildi'">Gönderildi</span>
                 </td>
             </tr>
           </tbody>
