--- a/admin/src/app/pages/islemler/stokKartIslemleri/stokKartIslemleri.html
+++ b/admin/src/app/pages/islemler/stokKartIslemleri/stokKartIslemleri.html
@@ -32,15 +32,15 @@
                 </select>
             </div>
             <div class="col-md-3 form-group">
-                <label>Fiyat(1): *</label>
+                <label>Fiyat 1 (Düşük Fiyat Politikası): *</label>
                 <input type="text" class="form-control" formControlName="e_fiyat_1" title="Fiyat(1)" mask="separator.2" prefix="₺ " required>
             </div>
             <div class="col-md-3 form-group">
-                <label>Fiyat(2): *</label>
+                <label>Fiyat 2 (Standart Fiyat Politikası): *</label>
                 <input type="text" class="form-control" formControlName="e_fiyat_2" title="Fiyat(2)" mask="separator.2" prefix="₺ " required>
             </div>
             <div class="col-md-3 form-group">
-                <label>Fiyat(3): *</label>
+                <label>Fiyat 3 (Yüksek Fiyat Politikası): *</label>
                 <input type="text" class="form-control" formControlName="e_fiyat_3" title="Fiyat(3)" mask="separator.2" prefix="₺ " required>
             </div>
             <div class="col-md-3 form-group">
@@ -140,9 +140,9 @@
             <th class="text-center w-10">Cinsiyet</th>
             <th class="text-center w-5">Stok Kodu</th>
             <th class="text-center w-20">Ürün Adı</th>
-            <th class="text-center w-10">Fiyat(1)</th>
-            <th class="text-center w-10">Fiyat(2)</th>
-            <th class="text-center w-10">Fiyat(3)</th>
+            <th class="text-center w-10">Fiyat 1</th>
+            <th class="text-center w-10">Fiyat 2</th>
+            <th class="text-center w-10">Fiyat 3</th>
             <th class="text-center w-10">Durum</th>
             <th class="text-center w-15">
                 <button class="btn btn-primary btn-sm btn-block " (click)="ekleButton()"  ><i class="fas fa-plus mr-1"></i> Yeni Stok Kartı Ekle</button>
