--- a/admin/src/app/pages/islemler/bayiIslemleri/bayiIslemleri.html
+++ b/admin/src/app/pages/islemler/bayiIslemleri/bayiIslemleri.html
@@ -32,9 +32,9 @@
             <label>Fiyat Politikası *</label>
             <!-- <input type="text" class="form-control" formControlName="e_fiyat_politikasi" title="Fiyat Politikası" maxlength="1" required> -->
             <select class="form-control" formControlName="e_fiyat_politikasi" title="Fiyat Politikası" required>
-              <option value="1">Düşük Fiyat Politikası</option>
-              <option value="2">Standart Fiyat Politikası</option>
-              <option value="3">Yüksek Fiyat Politikası</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
             </select>
           </div>
           <div class="col-md-12 form-group">
@@ -270,10 +270,8 @@
             <td class="text-left">{{bayi.e_yetkilisi}}</td>
             <td class="text-left">{{bayi.e_il}}</td>
             <td class="text-left">{{bayi.e_ilce}}</td>
-            <td class="text-left" *ngIf="bayi.e_fiyat_politikasi == '1'">Düşük</td>
-            <td class="text-left" *ngIf="bayi.e_fiyat_politikasi == '2'">Standart</td>
-            <td class="text-left" *ngIf="bayi.e_fiyat_politikasi == '3'">Yüksek</td>
-            <td class="text-left">{{bayi.e_iskonto_orani}} %</td>
+            <td class="text-center">{{bayi.e_fiyat_politikasi}}</td>
+            <td class="text-center">{{bayi.e_iskonto_orani}} %</td>
             <td class="text-center">
                 <span class="badge badge-success p-1 w-100 " *ngIf="bayi.e_durum == 'Aktif'">Aktif</span>
             <span class="badge badge-secondary p-1 w-100 " *ngIf="bayi.e_durum != 'Aktif'">Pasif</span>
