siparis kayitlari ve satis kayitlari duzenlendi

--- a/admin/src/app/pages/kayitlar/siparisKayitlari/siparisKayitlari.html
+++ b/admin/src/app/pages/kayitlar/siparisKayitlari/siparisKayitlari.html
@@ -68,14 +68,14 @@
   <div class="col-3">
     <div class="shadow-info m-1" (click)="filtreliListele('İşleme Alındı')">
       <div class="card-body" style="text-align: center;">
-        <strong>İşleme Alındı : {{siparisOzetSayilar[0].ISLEME_ALINDI}}</strong>
+        <strong>İşleme Alınan : {{siparisOzetSayilar[0].ISLEME_ALINDI}}</strong>
       </div>
     </div>
   </div>
   <div class="col-3" (click)="filtreliListele('Gönderildi')">
     <div class="shadow-success m-1">
       <div class="card-body" style="text-align: center;">
-        <strong>Gönderildi : {{siparisOzetSayilar[0].GONDERILDI}}</strong>
+        <strong>Gönderilen : {{siparisOzetSayilar[0].GONDERILDI}}</strong>
       </div>
     </div>
   </div>
