--- a/admin/src/app/pages/kayitlar/satisKayitlari/satisKayitlari.html
+++ b/admin/src/app/pages/kayitlar/satisKayitlari/satisKayitlari.html
@@ -5,7 +5,10 @@
     <form class="row m-0" (submit)="satisListele()">
       <div class="form-group col-md-8">
         <label>Arama:</label>
-        <input type="text" class="form-control" [(ngModel)]="filterData.ARAMA" [ngModelOptions]="{standalone: true}">
+        <select class="form-control" [(ngModel)]="filterData.ARAMA" [ngModelOptions]="{standalone: true}" (change)="satisListele()">
+          <option value="">-- Tümü --</option>
+          <option value="{{bayi.e_bayi_adi}}" *ngFor="let bayi of bayiKayitlari">{{bayi.e_bayi_adi}}</option>
+        </select>
       </div>
       <div class="form-group col-md-2">
         <label>Durum:</label>
@@ -39,17 +42,21 @@
         <table class="table table-bordered table-hover">
           <thead>
             <tr class="alert-primary">
-              <th class="text-center w-25">Tarih</th>
-              <th class="text-center w-25">Siparişi Açan</th>
-              <th class="text-center w-25">Ödeme Şekli</th>
+              <th class="text-center w-15">Tarih</th>
+              <th class="text-center w-5">Bayi Kodu</th>
+              <th class="text-center w-20">Bayi Adı</th>
+              <th class="text-center w-20">Siparişi Açan</th>
+              <th class="text-center w-15">Ödeme Şekli</th>
               <th class="text-center w-25">Tutar</th>
             </tr>
           </thead>
           <tbody>
             <tr *ngFor="let satis of satisListesi">
                 <td class="text-center">{{satis.e_tarih | date: 'dd.MM.yyyy - HH:mm'}}</td>
+                <td class="text-center">{{satis.e_bayi_kodu}}</td>
+                <td class="text-center">{{satis.e_bayi_adi}}</td>
                 <td class="text-left">{{satis.e_satisi_acan_kullanici_adi}}</td>
-                <td class="text-left">{{satis.e_odeme_tipi}} adet</td>
+                <td class="text-left">{{satis.e_odeme_tipi}}</td>
                 <td class="text-right">{{satis.e_sepet_toplami | currency : ' '}} ₺</td>
             </tr>
           </tbody>
