--- a/admin/src/app/pages/kayitlar/satisKayitlari/satisKayitlari.html
+++ b/admin/src/app/pages/kayitlar/satisKayitlari/satisKayitlari.html
@@ -3,25 +3,25 @@
 <div class="card shadow-dark mb-3">
   <div class="card-body">
     <form class="row m-0" (submit)="satisListele()">
-      <div class="form-group col-md-8">
+      <div class="form-group col-md-4">
         <label>Arama:</label>
         <select class="form-control" [(ngModel)]="filterData.ARAMA" [ngModelOptions]="{standalone: true}" (change)="satisListele()">
           <option value="">-- Tümü --</option>
           <option value="{{bayi.e_bayi_adi}}" *ngFor="let bayi of bayiKayitlari">{{bayi.e_bayi_adi}}</option>
         </select>
       </div>
-      <div class="form-group col-md-2">
-        <label>Durum:</label>
-        <select class="form-control" [(ngModel)]="filterData.e_durum" [ngModelOptions]="{standalone: true}" (change)="satisListele()">
-          <option value="">-- Tümü --</option>
-          <option value="Aktif">Aktif</option>
-          <option value="Pasif">Pasif</option>
-        </select>
+      <div class="form-group col-md-4">
+        <label>Tarih Başlangıç:</label>
+        <input type="date" class="form-control" [(ngModel)]="filterData.TARIH_BAS" [ngModelOptions]="{standalone: true}" (change)="satisListele()">
       </div>
-      <div class="form-group col-md-2">
+      <div class="form-group col-md-4">
+        <label>Tarih Bitiş:</label>
+        <input type="date" class="form-control" [(ngModel)]="filterData.TARIH_SON" [ngModelOptions]="{standalone: true}" (change)="satisListele()">
+      </div>
+      <!-- <div class="form-group col-md-2">
         <label>&nbsp;</label>
         <button class="btn btn-dark btn-block" (click)="satisListele()"><i class="fas fa-sync mr-2"></i> Filtrele</button>
-      </div>
+      </div> -->
     </form>
   </div>
 </div>
