--- a/admin/src/app/pages/kayitlar/satisKayitlari/satisKayitlari.html
+++ b/admin/src/app/pages/kayitlar/satisKayitlari/satisKayitlari.html
@@ -1,27 +1,80 @@
+
+<ng-template #modalBayi let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">{{modalHeader.title}}</h4>
+    <button id="modalUrunKpt" type="button" class="close" aria-label="Close" (click)="modal.dismiss('');">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div class="alert alert-primary p-4" *ngIf="!bayiKayitlari && !bayiLoader">
+      <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
+      <span class=" valign-middle">Listelemek istediğiniz bayi bulunamadı.</span>
+    </div>
+    <div class="alert alert-primary p-4" *ngIf="bayiLoader">
+      <div class="spinner-glow spinner-glow-primary m-0 mr-4 valign-middle"></div>
+      <span class=" valign-middle">Bayi kayıtları listeleniyor, lütfen bekleyiniz.</span>
+    </div>
+    <div class="card full-list-1" [hidden]="!bayiKayitlari || bayiLoader" style="height: calc(100vh - 354px)">
+      <div class="card-body" *ngIf="bayiKayitlari && !bayiLoader">
+        <div class="table-responsive">
+          <table class="table table-bordered table-hover">
+            <thead>
+              <tr class="alert-primary">
+                <th class="text-center w-10">Bayi Kodu</th>
+                <th class="text-center w-25">Bayi Adı</th>
+                <th class="text-center w-10">İl</th>
+                <th class="text-center w-10">İlçe</th>
+                <th class="text-center w-25">Yetkili</th>
+                <th class="text-center w-20"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let bayi of bayiKayitlari" (click)="bayiSec(bayi)">
+                <td class="text-left">{{bayi.e_bayi_kodu}}</td>
+                <td class="text-left">{{bayi.e_bayi_adi}}</td>
+                <td class="text-right">{{bayi.e_il}}</td>
+                <td class="text-right">{{bayi.e_ilce}}</td>
+                <td class="text-right">{{bayi.e_yetkilisi}}</td>
+                <td class="text-left">
+                  <button type="button" class="btn btn-block btn-primary w-100"><span class="fas fa-solid fa-hand-pointer mr-1"></span> Seç</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
+
 <div class="separator-breadcrumb border-top mb-3"></div>
   
 <div class="card shadow-dark mb-3">
   <div class="card-body">
     <form class="row m-0" (submit)="satisListele()">
       <div class="form-group col-md-4">
-        <label>Arama:</label>
-        <select class="form-control" [(ngModel)]="filterData.ARAMA" [ngModelOptions]="{standalone: true}" (change)="satisListele()">
-          <option value="">-- Tümü --</option>
-          <option value="{{bayi.e_bayi_adi}}" *ngFor="let bayi of bayiKayitlari">{{bayi.e_bayi_adi}}</option>
-        </select>
+        <label>Bayi :</label>
+        <div class="input-group">
+          <input type="text" class="form-control" [(ngModel)]="filterData.e_bayi_adi" [ngModelOptions]="{standalone: true}" readonly>
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-primary" (click)="bayiFiltreleButton()"><i class="fas fa-solid fa-hand-pointer mr-1"></i> Bayi Seç</button>
+            <button type="button" class="btn btn-dark" (click)="bayiSec('')"><i class="fas fa-solid fa-eraser mr-1"></i> Temizle</button>
+          </span>
+        </div>
       </div>
-      <div class="form-group col-md-4">
-        <label>Tarih Başlangıç:</label>
-        <input type="date" class="form-control" [(ngModel)]="filterData.TARIH_BAS" [ngModelOptions]="{standalone: true}" (change)="satisListele()">
+      <div class="form-group col-md-3">
+        <label>Tarih Başlangıç :</label>
+        <input type="date" class="form-control" [(ngModel)]="filterData.TARIH_BAS" [ngModelOptions]="{standalone: true}">
       </div>
-      <div class="form-group col-md-4">
-        <label>Tarih Bitiş:</label>
-        <input type="date" class="form-control" [(ngModel)]="filterData.TARIH_SON" [ngModelOptions]="{standalone: true}" (change)="satisListele()">
+      <div class="form-group col-md-3">
+        <label>Tarih Bitiş :</label>
+        <input type="date" class="form-control" [(ngModel)]="filterData.TARIH_SON" [ngModelOptions]="{standalone: true}">
       </div>
-      <!-- <div class="form-group col-md-2">
+      <div class="form-group col-md-2">
         <label>&nbsp;</label>
         <button class="btn btn-dark btn-block" (click)="satisListele()"><i class="fas fa-sync mr-2"></i> Filtrele</button>
-      </div> -->
+      </div>
     </form>
   </div>
 </div>
