--- a/admin/src/app/pages/kayitlar/satisKayitlari/satisKayitlari.html
+++ b/admin/src/app/pages/kayitlar/satisKayitlari/satisKayitlari.html
@@ -12,11 +12,11 @@
           <form class="row m-0" (submit)="bayiKayitlariListele()">
           <div class="form-group col-md-8">
               <label>Arama:</label>
-              <input type="text" class="form-control" [(ngModel)]="filterData.ARAMA" [ngModelOptions]="{standalone: true}">
+              <input type="text" class="form-control" [(ngModel)]="bayiFilterData.ARAMA" [ngModelOptions]="{standalone: true}">
           </div>
           <div class="form-group col-md-2">
               <label>Durum:</label>
-              <select class="form-control" [(ngModel)]="filterData.e_durum" [ngModelOptions]="{standalone: true}" (click)="bayiKayitlariListele()">
+              <select class="form-control" [(ngModel)]="bayiFilterData.e_durum" [ngModelOptions]="{standalone: true}" (change)="bayiKayitlariListele()">
                 <option value="">-- Tümü --</option>
                 <option value="Aktif">Aktif</option>
                 <option value="Pasif">Pasif</option>
@@ -24,7 +24,7 @@
           </div>
           <div class="form-group col-md-2">
               <label>&nbsp;</label>
-              <button class="btn btn-dark btn-block"><i class="fas fa-sync mr-2"></i> Filtrele</button>
+              <button class="btn btn-dark btn-block" (click)="bayiKayitlariListele()"><i class="fas fa-sync mr-2"></i> Filtrele</button>
           </div>
           </form>
       </div>
