--- a/admin/src/app/pages/kayitlar/satisKayitlari/satisKayitlari.html
+++ b/admin/src/app/pages/kayitlar/satisKayitlari/satisKayitlari.html
@@ -132,7 +132,7 @@
               <td class="text-left">{{satis.e_bayi_adi}}</td>
               <td class="text-left">{{satis.e_satisi_acan_kullanici_adi}}</td>
               <td class="text-center">{{satis.e_odeme_tipi}}</td>
-              <td class="text-right">{{satis.e_sepet_toplami | currency : ' '}} ₺</td>
+              <td class="text-right">{{satis.e_sepet_toplami | currency : ' '}} €</td>
             </tr>
             <tr class="alert-primary">
               <td></td>
@@ -140,7 +140,7 @@
               <td></td>
               <td></td>
               <td></td>
-              <td class="text-right">SATIŞ TOPLAMI : {{satisListesi[0].SATIS_TOPLAMI | currency : ' '}} ₺</td>
+              <td class="text-right">SATIŞ TOPLAMI : {{satisListesi[0].SATIS_TOPLAMI | currency : ' '}} €</td>
             </tr>
           </tbody>
         </table>
