--- a/admin/src/app/pages/islemler/stokKartIslemleri/stokKartIslemleri.html
+++ b/admin/src/app/pages/islemler/stokKartIslemleri/stokKartIslemleri.html
@@ -45,7 +45,7 @@
             </div>
             <div class="col-md-3 form-group">
                 <label>Resim Uzantısı: *</label>
-                <input type="text" class="form-control" formControlName="e_resim_dosya_uzantisi" title="Resim Uzantısı" required>
+                <input type="text" class="form-control" formControlName="e_resim_dosya_uzantisi" title="Resim Uzantısı" readonly required>
             </div>
             <div class="col-md-12 form-group">
                 <label>Açıklama: *</label>
